# xxh

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  README.plugins.md  pyproject.toml  requirements.txt  setup.py  xonsh_plugins_rc.xsh  xonshrc.xsh  xxh  xxh-appimage-build.xsh  xxh-appimage.Dockerfile  xxh-portable-musl-alpine-build.xsh  xxh-portable-musl-alpine.Dockerfile  xxh.xsh  xxh.zsh  xxhp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: main.yml  pullrequest-test.yml  push-test.yml  release-build-appimage.yml  release-build-portable.yml  release.yml
appimage/: entrypoint.sh  pre-requirements.txt  xxh.appdata.xml  xxh.desktop
plugin-development/: README.md  Vagrantfile  start.sh
plugins/: README.md
portable-musl-alpine/: Setup.local
xde/: .gitattributes  .gitignore  README.md  docker-compose.yml  requirements.txt  xde  xde-test-fast  xxh-dev-centos-k.Dockerfile  xxh-dev-start-entrypoint.sh  xxh-dev-start.Dockerfile  xxh-dev-start.sh  xxh-dev-ubuntu-k.Dockerfile  xxh-dev-ubuntu-kf.Dockerfile
xde/keys/: README.md  id_rsa  id_rsa.pub
xde/keys/keys_password/: README.md  id_rsa  id_rsa.pub
xde/tests/: tests.xsh
xonssh_xxh/: config.xxhc  example.xxhc  host_info.sh  settings.py  settings.xsh  xonshrc.xsh  xxh_plugins_rc.xsh
xxh/: xxh
xxh-shell-xonsh-appimage/: build.xsh  entrypoint.sh
xxh/xxh_xxh/: __init__.py  config.xxhc  shell.py  xxh.py  xxh.zsh
xxh_xxh/: config.xxhc  host_info.sh  settings.py  shell.py  xxh.bash  xxh.py  xxh.xsh  xxh.zsh
(+12 files in other folders)
